migrate configuration to env-based setup